Feature: Authentication Add: design the login page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-nav-bar></app-nav-bar>
 
-<main class="flex-fill my-5">
+<main class="flex-fill">
   <router-outlet></router-outlet>
 </main>
 
