--- a/src/app/shared/components/footer-bar/footer-bar.component.html
+++ b/src/app/shared/components/footer-bar/footer-bar.component.html
@@ -1,4 +1,4 @@
-<footer class="bg-dark text-light py-5 mt-5">
+<footer class="bg-dark text-light py-5">
   <div class="container text-center">
     <div class="mb-3">
       <img src="assets/images/objectif.webp" alt="Logo" width="48" class="me-2 img-fluid">
