Feature: Authentication Add: register Route to the app and fix error

--- a/src/app/pages/auth-pages/longin-page/longin-page.component.html
+++ b/src/app/pages/auth-pages/longin-page/longin-page.component.html
@@ -17,7 +17,7 @@
     <div *ngIf="error" class="text-danger mt-3">{{ error }}</div>
 
     <div class="mt-4 small text-white">
-      Pas encore de compte ? <a routerLink="/join" class="text-light fw-semibold">Créer un compte</a>
+      Pas encore de compte ? <a routerLink="/register" class="text-light fw-semibold">Créer un compte</a>
     </div>
   </div>
 </div>
