--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -13,7 +13,7 @@
     <div class="collapse navbar-collapse" id="mainNav">
       <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link fw-semibold text-dark" href="#">
+          <a class="nav-link fw-semibold text-dark" routerLink="/home">
             {{ translations.nav_about || 'À propos de ObjectifBildung' }}
           </a>
         </li>
@@ -22,7 +22,7 @@
       <ul *ngIf="isLogged" class="navbar-nav mx-auto mb-2 mb-lg-0">
 
         <li class="nav-item">
-          <a class="nav-link fw-semibold text-dark" href="#">
+          <a class="nav-link fw-semibold text-dark" routerLink="/me">
             {{ translations.nav_dashboard || 'Mon espace' }}
           </a>
         </li>
@@ -34,8 +34,8 @@
             <span class="ms-1 fs-6">&#9662;</span>
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">{{ translations.nav_translate || 'Traduction de documents' }}</a></li>
-            <li><a class="dropdown-item" href="#">{{ translations.nav_cv || 'Générateur de CV' }}</a></li>
+            <li><a class="dropdown-item">{{ translations.nav_translate || 'Traduction de documents' }}</a></li>
+            <li><a class="dropdown-item">{{ translations.nav_cv || 'Générateur de CV' }}</a></li>
           </ul>
         </li>
       </ul>
