--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+html, body {
+  height: 100%;
+  overflow-y: auto; /* autorise le scroll vertical */
+  scroll-behavior: smooth; /* optionnel : scroll fluide */
+}
