--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -14,7 +14,7 @@
       <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link fw-semibold text-dark" routerLink="/home">
-            {{ translations.nav_about || 'À propos de ObjectifBildung' }}
+            {{ translations.home || 'Accueil' }}
           </a>
         </li>
         <li class="nav-item">
