--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -18,6 +18,7 @@
     <h2 class="fw-bold mb-5">Nos Services</h2>
 
     <div class="row g-4">
+      <a  [routerLink] ="services.redirect"></a>
       <div class="col-md-6 col-lg-3" *ngFor="let service of services">
         <div class="card h-100 shadow-sm service-card p-3 border-0">
           <div class="icon mb-3">
